--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.8",
     "react-expanding-textarea": "^2.3.6",
     "react-google-autocomplete": "^2.7.1",
     "react-hot-toast": "^2.4.0",
