--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "emoji-picker-react": "^4.4.7",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
