--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "react-expanding-textarea": "^2.3.6",
     "react-google-autocomplete": "^2.7.1",
     "react-hot-toast": "^2.4.0",
+    "react-hotkeys-hook": "^4.3.2",
     "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
