--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^4.2.0",
+    "serve": "^14.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "serve -s build"
   },
   "eslintConfig": {
     "extends": [
